objects/vlocity_ins__AssetRevenueScheduleEntry__c.object
<CustomObject>
    <description>Represents calculated earned revenue from insurance premiums or other revenue sources. Entries are calculated per financial period for an insurance policy. Includes entries already earned as well as future earned revenue estimates. Master-detail child object of Policy (Asset).</description>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <label>Held Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>AssetRevenueSchedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PeriodEarnedRevenue__c</fullName>
        <label>Revenue Earned in Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceAssetTransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Asset Transaction Id</label>
        <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
        <relationshipLabel>Revenue Schedule</relationshipLabel>
        <relationshipName>SourceAssetTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalEarnedRevenue__c</fullName>
        <label>Total Earned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalUnearnedRevenue__c</fullName>
        <label>Total Unearned Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Schedule Entry</label>
    <nameField>
        <label>Entry Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>